# panottiServer

./: .coveragerc  .cursorignore  .cursorrules  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.ollama.yml  docker-compose.yml  mypy.ini  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-test.txt  requirements.txt  run_server.py  start_server.sh  start_servers.sh  stop_servers.sh  test_api.py  test_db_schema.py  uvicorn.conf.py
admin-frontend/: .cursorrules  .eslintrc.json  .gitignore  Dockerfile  admin-frontend-requirements-prd.md  next.config.js  package-lock.json  package.json  password-hash.txt  start_admin_server.sh  tailwind.config.ts  tsconfig.json
admin-frontend/scripts/: init-password.js
admin-frontend/src/: middleware.ts
admin-frontend/src/app/: globals.css  layout.tsx  page.tsx
admin-frontend/src/app/(auth)/login/: page.tsx
admin-frontend/src/app/docs/: page.tsx
admin-frontend/src/app/privacy-policy/: page.tsx
admin-frontend/src/app/terms-and-conditions/: page.tsx
admin-frontend/src/components/: Footer.tsx  Header.tsx
admin-frontend/src/components/auth/: ChangePasswordModal.tsx  LoginForm.tsx
admin-frontend/src/components/error/: ErrorBoundary.tsx  ErrorDisplay.tsx
admin-frontend/src/components/features/: DiscordCommunity.tsx
admin-frontend/src/components/layouts/: MainLayout.tsx  MobileMenu.tsx
admin-frontend/src/components/sections/: Contact.tsx  Features.tsx  Hero.tsx  Pricing.tsx  VideoSection.tsx
admin-frontend/src/components/settings/: EnvironmentVariables.tsx  PluginSettings.tsx  RestartModal.tsx
admin-frontend/src/components/ui/: AnnouncementStrip.tsx  Button.tsx  ServerStatus.tsx  Toast.tsx
admin-frontend/src/hooks/: useErrorBoundary.tsx  useSmoothScroll.ts  useToast.tsx
admin-frontend/src/test/: setup.ts  utils.tsx
app/: main.py  utils.py
app/core/: plugins.py
app/core/events/: __init__.py  bus.py  models.py  persistence.py  types.py
app/core/events/handlers/: __init__.py  recording.py
app/core/plugins/: __init__.py  interface.py  manager.py  protocol.py
app/models/: database.py  event.py  event_bus.py
app/models/migrations/: 001_add_audio_paths.sql  002_remove_recording_events_unique_constraint.sql  002_update_plugin_tasks.sql
app/models/recording/: __init__.py  events.py  requests.py
app/models2/: event.py
app/plugins/: __init__.py  base.py  hookspec.py  manager.py
app/plugins/audio_transcription/: .gitignore  README.md  __init__.py  plugin.py  plugin.yaml  requirements.txt
app/plugins/audio_transcription/scripts/: download_models.py
app/plugins/audio_transcription_local/: README.md  __init__.py  plugin.py  plugin.yaml.example  transcript_cleaner.py
app/plugins/audio_transcription_local/tests/: test_audio_transcription_local_plugin.py
app/plugins/cleanup_files/: .gitignore  README.md  __init__.py  plugin.py  plugin.yaml.example
app/plugins/cleanup_files/tests/: test_cleanup_files_plugin.py
app/plugins/desktop_notifier/: README.md  __init__.py  plugin.py  plugin.yaml  plugin.yaml.example
app/plugins/desktop_notifier/tests/: test_desktop_notifier_plugin.py
app/plugins/events/: __init__.py  bus.py  models.py  persistence.py
app/plugins/example/: README.md  __init__.py  plugin.py  plugin.yaml  plugin.yaml.example
app/plugins/example/tests/: conftest.py  test_example_plugin.py
app/plugins/meeting_notes/: README.md  __init__.py  plugin.py  plugin.yaml  plugin.yaml.example
app/plugins/meeting_notes_local/: README.md  __init__.py  plugin.py  plugin.yaml.example
app/plugins/meeting_notes_local/tests/: test_meeting_notes_local_plugin.py
app/plugins/meeting_notes_remote/: README.md  __init__.py  plugin.py  plugin.yaml.example  requirements.txt
app/plugins/noise_reduction/: README.md  __init__.py  plugin.py  plugin.yaml  plugin.yaml.example  requirements.txt
app/tests/: test_events.py
app/user_plugins/: README.md
app/user_plugins/example_user_plugin/: __init__.py  plugin.py  requirements.txt
app/utils/: __init__.py  directory_sync.py  logging_config.py
docker/ollama/: Dockerfile  entrypoint.sh
panottiServer-vault/: panottiServer Roadmap Board.md
panottiServer-vault/.obsidian/: workspace.json
panottiServer-vault/architecture/: architecture_overview.md  deployment_and_middleware.md  event_system.md  models.md  plugin_development_guide.md  plugins.md  security_and_configuration.md  using-asyncio.sleep-for-long-running-tests.md  utils.md
panottiServer-vault/architecture/async-test-reference/: async_testing_guide.md
panottiServer-vault/default-prompts/: run-add-docs.md  run-add-logging.md  run-add-missing-tests.md  run-check-refactor.md  run-codebase-analysis.md  run-linting.md  run-refactor-prd-document.md  run-save-prompt.md  run-tests.md  run-update-docs.md
panottiServer-vault/product-requirements/: admin-frontend-requirements-prompt.md  audio-preprocessing-plugin-requirement.md  audio-transcription-plugin-requirements.md  basic-product-requirements.md  cleanup-files-server-plugin-requirements.md  desktop-notifier-plugin.md  meeting-note-plugin-requirements.md  plugin-architecture-requirements.md  plugin-requirements-example-cdoe.md
scripts/: README.md  audio-transcript-cleanup-spike.py  cleanup_test_data.sh  dirlock.sh  init-ollama.sh  migrate_db.py  setup.py
scripts/migrations/: 001_add_metadata_columns.py  002_add_recording_timestamps.py  003_remove_recording_datetime.py  004_rename_timestamp_field.py
test/: conftest.py  test_noise_reduction.py
tests/: __init__.py  conftest.py  test_base.py  test_core_plugins.py  test_database.py  test_directory_sync.py  test_event_bus.py  test_events.py  test_events_common.py  test_logging_config.py  test_main.py  test_models.py  test_persistence.py  test_plugin_manager.py  test_recording_handlers.py  test_recording_requests.py  test_run_server.py  test_types.py
tests/core/plugins/: test_manager.py  test_protocol.py
tests/plugins/: test_plugin_interface.py
tests/test_unit/test_events/: test_bus.py
(+16 files in other folders)
